	* macosx/tkMacOSXInit.c: set default linewidth limit for CG
	antialiasing to 0 as thin horizontal/vertical lines look good now.
	* macosx/README: document CG antialiasing limit changes.

	* generic/tkCanvLine.c (ConfigureLine):     on TkAqua, pass outline
	* generic/tkCanvPoly.c (ConfigurePolygon):  linewidth in gc even for
	* generic/tkRectOval.c (ConfigureRectOval): fills (as it controls AA).

2006-10-10  Don Porter  <dgp@users.sourceforge.net>

	* changes:		changes updated for 8.4.14 release.

2006-10-05  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/tkUnixFont.c (Ucs2beToUtfProc, UtfToUcs2beProc):
	(TkpFontPkgInit, encodingAliases): Correct alignment issues in
	encoding conversion.  Call ucs-2be "unicode" on big-endian
	systems. [Bug 1122671]

2006-09-27  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/makefile.vc:  Support MSVC8 and AMD64 target. Also try using
	* win/rules.vc:     sed to generate the manifest (cross-compile cannot
	* win/nmakehlp.c:   execute tclsh). If no sed, use the tclsh exe.

2006-09-25  Andreas Kupries  <andreask@activestate.com>

	* generic/tkConsole.c: Complete reversal of the changes of Sep 22.
	* generic/tkMain.c:    For compat reason the Tcl core will not change
	* generic/tkWindow.c:  the registered version to include the patchlevel,
	* library/tk.tcl:      making the changes to Tk unnecessary.
	* unix/configure:
	* unix/Makefile.in:
	* unix/tcl.m4:
	* win/configure:
	* win/Makefile.in:
	* win/makefile.vc:
	* win/rules.vc:
	* win/tcl.m4:

2006-09-22  Andreas Kupries  <andreask@activestate.com>

	* generic/tkConsole.c: TIP #268 update regarding registered package
	* generic/tkMain.c:    version, now using full patchlevel instead of
	* generic/tkWindow.c:  major.minor
	* library/tk.tcl:
	* unix/configure:
	* unix/Makefile.in:
	* unix/tcl.m4:
	* win/configure:
	* win/Makefile.in:
	* win/makefile.vc:
	* win/rules.vc:
	* win/tcl.m4:

2006-09-22  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
